@@ -392,12 +392,23 @@ class SalesforcePFGAdapter(FormActionAdapter):
                         sObject[mimetypeFieldName] = mimetype
 
             salesforceFieldName = self._getSFFieldForFormField(formFieldPath, formPath)
-            if not salesforceFieldName or formFieldValue is None:
-                # we either haven't found a mapping or the
-                # the form field was left blank and we therefore
+            
+            if not salesforceFieldName:
+                # We haven't found a mapping to a Salesforce field.
+                continue
+            
+            if self.getCreationMode() == 'update' and formFieldValue == '':
+                # The adapter is in update mode and one of the fields has a value
+                # of an empty string. If that field is nillable in Salesforce, we
+                # should set its value to None so that it gets cleared.
+                salesforceField = self._fieldsForSFObjectType[salesforceFieldName]
+                if getattr(salesforceField, 'nillable', False):
+                    formFieldValue = None
+            elif formFieldValue is None:
+                # The form field was left blank and we therefore
                 # don't care about passing along that value, since
                 # the Salesforce object field may have it's own ideas
-                # about data types and or default values
+                # about data types and or default values.
                 continue
             
             sObject[salesforceFieldName] = formFieldValue
